# DjangoRestToDo

./: .env.example  .gitignore  Backend Assignment Task.md  README.md  manage.py  pyproject.toml  requirements.txt
config/: celery.py  settings.py  urls.py
drf_to_do/: asgi.py  settings.py  urls.py  wsgi.py
mention/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
mention/migrations/: 0001_initial.py
mention/templates/mention/: home.html
templates/: base.html
to_do/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
to_do/migrations/: 0001_initial.py
to_do/templates/to_do/: home.html
